# tictactoeai

./: CMakeLists.txt  README.md  main.cpp  minmax.lisp  tictactoeai.c  tictactoeai.cpp  tictactoeai.h
.github/workflows/: cmake-multi-platform.yml
